overflow horizontal scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    transition: background-color 0.5s ease;
 }
 
 :root {
@@ -34,8 +33,8 @@ body {
     display: flex;
     place-items: center;
     min-width: 320px;
-    min-height: 100vh;
     max-width: fit-content;
+    overflow-x: hidden;
 }
 
 h1 {
